--- a/styles/pocasie.css
+++ b/styles/pocasie.css
@@ -180,3 +180,11 @@ header.map-page .header-title {
     }
 }
 
+footer {
+    background-color: #333;
+    text-align: center;
+    padding: 15px;
+    color: #f4f4f4;
+    font-size: 0.9rem;
+    border-top: 2px solid #555;
+}
